se agrega estilos.css para hacer la linea oblicua, agrego prueba en prueba.html

--- a/prueba.html
+++ b/prueba.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/menu.css">
+	<link rel="stylesheet" href="css/estilos.css">
     <title>Prueba</title>
   </head>
   <body>
     <p class="pino">PINO SE PLANTA</p>
+	
+	<section class="adaptable seccionMargenInferior"><div class="container"><p>TAKI</p><div class="absoluto"><p>TUKI</p><h2 class="adaptable__titulo">PINO<br>se planta</h2><figure class="adaptable__figura"><img src="img/home/adaptable_imagen.png" alt="imagen de responsive design"></figure></div></div></section>
+	
   </body>
 </html>
