Pruebas con polígonos css. Ya entendi como funcionan, falta pensarlo y maquetar bien

--- a/prueba.html
+++ b/prueba.html
@@ -8,8 +8,31 @@
   </head>
   <body>
     <p class="pino">PINO SE PLANTA</p>
-	
-	<section class="adaptable seccionMargenInferior"><div class="container"><p>TAKI</p><div class="absoluto"><p>TUKI</p><h2 class="adaptable__titulo">PINO<br>se planta</h2><figure class="adaptable__figura"><img src="img/home/adaptable_imagen.png" alt="imagen de responsive design"></figure></div></div></section>
-	
+
+	<!--<section class="adaptable seccionMargenInferior">
+    <div class="container">
+      <p>TAKI</p>
+      <div class="absoluto">
+        <p>TUKI</p>
+        <h2 class="adaptable__titulo">PINO<br>se planta</h2>
+        <figure class="adaptable__figura">
+          <img src="img/home/adaptable_imagen.png" alt="imagen de responsive design">
+        </figure>
+      </div>
+    </div>
+  </section>-->
+  <!--<p>SEPARADOR</p>-->
+
+  <section class="poligono-pino">
+    <p>poligono pino</p>
+  </section>
+
+  <section class="adaptable seccionMargenInferior">
+  </section>
+
+  <section class="rectangulo-pino">
+    <p>rectangulo pino</p>
+  </section>
+
   </body>
 </html>
