Pruebas de linea oblicua con estilos.css y prueba.html

--- a/prueba.html
+++ b/prueba.html
@@ -27,8 +27,11 @@
     <p>poligono pino</p>
   </section>
 
-  <section class="adaptable seccionMargenInferior">
+  <section class="contrapoligono-pino">
   </section>
+  
+  <!--<section class="adaptable seccionMargenInferior">
+  </section>-->
 
   <section class="rectangulo-pino">
     <p>rectangulo pino</p>
