index agrego la estructura de los servicios,enlaces a los css,y eqtiquetas meta

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE HTML>
 
-<html>
+<html lang="es">
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/generales.css">
+	<link rel="stylesheet" href="css/servicios.css">
 	<title>Pino Software 1</title>
 </head>
 
@@ -17,6 +21,45 @@
 			</ul>
 		</nav>
 	</header>
+
+
+	<section class="servicios">
+		<div class="container">	
+			<h2 class="titulo-seccion servicios__titulo">Everything you need to take AI from research to production</h2>
+			<div class="servicio__container">
+				<article class="servicio__item">
+					<img class="servicio-img" src="img/pino.png" alt="">
+					<div class="servicio__info">
+						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<p class="servicio__item-texto">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
+							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+						</p>
+					</div>
+				</article>
+				<article class="servicio__item">
+					<img src="img/pino.png" alt="">
+					<div class="servicio__info">
+						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<p class="servicio__item-texto">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
+							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+						</p>
+					</div>
+				</article>
+				<article class="servicio__item">
+					<img src="img/pino.png" alt="">
+					<div class="servicio__info">
+						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<p class="servicio__item-texto">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
+							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+						</p>
+					</div>
+				</article>
+			</div>
+		</div>
+	</section>
 	
 	<footer>
 		<p>Copyright 2019 Pino Software</p>
