Estetica azulada y comienzos de barra

--- a/pino.html
+++ b/pino.html
@@ -6,6 +6,9 @@
     <title>Pino se planta</title>
   </head>
   <body class="pinomain">
+    <header class="pinohead">
+      <p><b>Pino Software </b>Artificial Intelligence</p>
+    </header>
     <section class="pinotransp">
     </section>
     <section class="contrapoligono-pino">
