Mejora de barra superior (falta) y agregado de contenido y footer

--- a/pino.html
+++ b/pino.html
@@ -7,19 +7,31 @@
   </head>
   <body class="pinomain">
     <header class="pinohead">
-      <p><b>Pino Software </b>Artificial Intelligence</p>
+      <div class="box">
+          <p class="pinotitulo"><b>Pino Software </b>Inteligencia Artificial</p>
+        <div class="topnav">
+          <a href="#pinor1">Pinorect 3</a>
+          <a href="#pinor2">Pinorect 2</a>
+          <a href="#pinor3">Pinorect 1</a>
+          <a class="active" href="#contrapol">Polígono</a>
+        </div>
+      </div>
     </header>
     <section class="pinotransp">
     </section>
-    <section class="contrapoligono-pino">
+    <section id="contrapol" class="contrapoligono-pino">
+      <p class="pinofondoblanco">Pino se planta.</br>Pino Software éxito mundial.</p>
+      <p class="pinofondoblancochico">Pino Software is a company that creates software solutions for different customers around the world.</br>
+      It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>
     </section>
-    <section class="pinorect1">
+    <section id="pinor1" class="pinorect1">
     </section>
-    <section class="pinorect2">
+    <section id="pinor2" class="pinorect2">
     </section>
-    <section class="pinorect3">
+    <section id="pinor3" class="pinorect3">
     </section>
   </body>
   <footer class="pinofoot">
+      <a>Todos los derechos reservados (C) Pino Software 2019</a>
   </footer>
 </html>
