--- a/pino.html
+++ b/pino.html
@@ -10,9 +10,9 @@
       <div class="box">
           <p class="pinotitulo"><b>Pino Software </b>Inteligencia Artificial</p>
         <div class="topnav">
-          <a href="#pinor1">Pinorect 3</a>
+          <a href="#pinor3">Pinorect 3</a>
           <a href="#pinor2">Pinorect 2</a>
-          <a href="#pinor3">Pinorect 1</a>
+          <a href="#pinor1">Pinorect 1</a>
           <a class="active" href="#contrapol">Polígono</a>
         </div>
       </div>
@@ -25,10 +25,19 @@
       It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>
     </section>
     <section id="pinor1" class="pinorect1">
+      <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
+      <p class="pinofondoazulchico">Dijo el New York Times: "These two guys are really awesome. It looks like the new generation of unicorn companies is in South America."</p>
     </section>
     <section id="pinor2" class="pinorect2">
+      <div class="boxder"> <!-- ¿está media al pedo? -->
+        <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
+        <p class="pinofondoazulchicoder">Dijo el Washington Post: "This argentine company will definitely change the course of mankind history."</p>
+      </div>
     </section>
     <section id="pinor3" class="pinorect3">
+      <p class="pinofondoazul">Un verdadero honor para la industria del software latinoamericana.</p>
+      <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
+      <p class="pinofondoazulchico">Agregó Bartolomé Mitre: "y cuando supe que estos dos viven en provincia, me quise cortar la ch#ta. Era un sueño y una pesadilla a la vez."</p>
     </section>
   </body>
   <footer class="pinofoot">
