Agregado de letras seccion principal. Falta hacer responsivo

--- a/pino.html
+++ b/pino.html
@@ -18,6 +18,8 @@
       </div>
     </header>
     <section class="pinotransp">
+      <p class="pinofontmain">Pino Software coloca la piedra fundacional del éxito en la inteligencia artificial mediante sus investigaciones de vanguardia</p>
+      <p class="pinofondoazulchico">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
     </section>
     <section id="contrapol" class="contrapoligono-pino">
       <p class="pinofondoblanco">Pino se planta.</br>Pino Software éxito mundial.</p>
