--- a/pino.html
+++ b/pino.html
@@ -19,6 +19,7 @@
     </header>
     <section class="pinotransp">
       <p class="pinofontmain">Pino Software coloca la piedra fundacional del éxito en la inteligencia artificial mediante sus investigaciones de vanguardia</p>
+      <p id="ancho" class="pinofondoazulchico"></p>
       <p class="pinofondoazulchico">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
     </section>
     <section id="contrapol" class="contrapoligono-pino">
@@ -41,6 +42,10 @@
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
       <p class="pinofondoazulchico">Agregó Bartolomé Mitre: "y cuando supe que estos dos viven en provincia, me quise cortar la ch#ta. Era un sueño y una pesadilla a la vez."</p>
     </section>
+    <script>
+      var ancho = "Ancho: " + document.documentElement.clientWidth + "px";
+      document.getElementById("ancho").innerHTML=ancho;
+    </script>
   </body>
   <footer class="pinofoot">
       <a>Todos los derechos reservados (C) Pino Software 2019</a>
