Ajustes en barra superior, cambio de color de fondo al hacer hover

--- a/pino.html
+++ b/pino.html
@@ -8,12 +8,12 @@
   <body class="pinomain">
     <header class="pinohead">
       <div class="box">
-          <p class="pinotitulo"><b>Pino Software </b>Inteligencia Artificial</p>
+          <p class="pinotitulo"><b>Pino Software </b> - Inteligencia Artificial</p>
         <div class="topnav">
-          <a href="#pinor3">Pinorect 3</a>
-          <a href="#pinor2">Pinorect 2</a>
-          <a href="#pinor1">Pinorect 1</a>
-          <a class="active" href="#contrapol">Polígono</a>
+          <a class="itemenu" href="#pinor3">Pinorect 3</a>
+          <a class="itemenu" href="#pinor2">Pinorect 2</a>
+          <a class="itemenu" href="#pinor1">Pinorect 1</a>
+          <a class="itemenu"  href="#contrapol">Polígono</a>
         </div>
       </div>
     </header>
