agrego mi parte a pino.html

--- a/index.html
+++ b/index.html
@@ -30,30 +30,27 @@
 				<article class="servicio__item">
 					<img class="servicio-img" src="img/pino.png" alt="">
 					<div class="servicio__info">
-						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<h3 class="servicio__item-subtitulo">End-to-End</h3>
 						<p class="servicio__item-texto">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
-							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+							Accelerate development with a deep learning system that seamlessly transitions between flexibility and efficiency. 
 						</p>
 					</div>
 				</article>
 				<article class="servicio__item">
-					<img src="img/pino.png" alt="">
+					<img class="servicio-img" src="img/pino.png" alt="">
 					<div class="servicio__info">
-						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<h3 class="servicio__item-subtitulo">State of the Art</h3>
 						<p class="servicio__item-texto">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
-							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+							Tap into the latest tech developed by Facebook AI Research and deployed in products used by billions.
 						</p>
 					</div>
 				</article>
 				<article class="servicio__item">
-					<img src="img/pino.png" alt="">
+					<img class="servicio-img" src="img/pino.png" alt="">
 					<div class="servicio__info">
-						<h3 class="servicio__item-subtitulo">titulo Secundario</h3>
+						<h3 class="servicio__item-subtitulo">Open & Compatible</h3>
 						<p class="servicio__item-texto">
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum perferendis saepe fuga. 
-							Tempore, error? Ad saepe soluta incidunt ullam itaque corrupti consectetur, 
+							Work with modular tools designed to be interoperable so you can choose the exact combination for your needs.
 						</p>
 					</div>
 				</article>
