--- a/pino.html
+++ b/pino.html
@@ -2,8 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/generales.css">
     <link rel="stylesheet" href="css/pino.css">
     <title>Pino se planta</title>
+    <link rel="stylesheet" href="css/servicios.css">
   </head>
   <body class="pinomain">
     <header class="pinohead">
@@ -27,6 +30,42 @@
       <p class="pinofondoblancochico">Pino Software is a company that creates software solutions for different customers around the world.</br>
       It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>
     </section>
+
+    <section class="servicios">
+      <div class="container">	
+        <h2 class="titulo-seccion servicios__titulo">Everything you need to take AI from research to production</h2>
+        <div class="servicio__container">
+          <article class="servicio__item">
+            <img class="servicio-img" src="img/pino.png" alt="">
+            <div class="servicio__info">
+              <h3 class="servicio__item-subtitulo">End-to-End</h3>
+              <p class="servicio__item-texto">
+                Accelerate development with a deep learning system that seamlessly transitions between flexibility and efficiency. 
+              </p>
+            </div>
+          </article>
+          <article class="servicio__item">
+            <img class="servicio-img" src="img/pino.png" alt="">
+            <div class="servicio__info">
+              <h3 class="servicio__item-subtitulo">State of the Art</h3>
+              <p class="servicio__item-texto">
+                Tap into the latest tech developed by Facebook AI Research and deployed in products used by billions.
+              </p>
+            </div>
+          </article>
+          <article class="servicio__item">
+            <img class="servicio-img" src="img/pino.png" alt="">
+            <div class="servicio__info">
+              <h3 class="servicio__item-subtitulo">Open & Compatible</h3>
+              <p class="servicio__item-texto">
+                Work with modular tools designed to be interoperable so you can choose the exact combination for your needs.
+              </p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
     <section id="pinor1" class="pinorect1">
       <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
       <p class="pinofondoazulchico">Dijo el New York Times: "These two guys are really awesome. It looks like the new generation of unicorn companies is in South America."</p>
