menu retoco un poco, falta la parte responsive. corrijo estilos de las otras secciones modificadas por el normalize.css

--- a/pino.html
+++ b/pino.html
@@ -9,26 +9,28 @@
     <link rel="stylesheet" href="css/servicios.css">
   </head>
   <body class="pinomain">
+    
     <header class="pinohead">
-      <div class="box">
-          <p class="pinotitulo"><b>Pino Software </b> - Inteligencia Artificial</p>
+      <div class="container box">
+        <p class="pinotitulo"><b>Pino Software </b> - Inteligencia Artificial</p>
         <div class="topnav">
-          <a class="itemenu" href="#pinor3">Pinorect 3</a>
-          <a class="itemenu" href="#pinor2">Pinorect 2</a>
-          <a class="itemenu" href="#pinor1">Pinorect 1</a>
-          <a class="itemenu"  href="#contrapol">Polígono</a>
+          <a class="itemenu" href="#pinor3">Tools</a>
+          <a class="itemenu" href="#pinor2">Research</a>
+          <a class="itemenu" href="#pinor1">Blog</a>
         </div>
       </div>
     </header>
+    
     <section class="pinotransp">
       <p class="pinofontmain">Pino Software coloca la piedra fundacional del éxito en la inteligencia artificial mediante sus investigaciones de vanguardia</p>
       <p id="ancho" class="pinofondoazulchico"></p>
       <p class="pinofondoazulchico">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
+      <a class="pinotransp__button" href="#">Explore Tools &gt;</a>
     </section>
     <section id="contrapol" class="contrapoligono-pino">
-      <p class="pinofondoblanco">Pino se planta.</br>Pino Software éxito mundial.</p>
+     <!--<p class="pinofondoblanco">Pino se planta.</br>Pino Software éxito mundial.</p>
       <p class="pinofondoblancochico">Pino Software is a company that creates software solutions for different customers around the world.</br>
-      It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>
+      It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>--> 
     </section>
 
     <section class="servicios">
@@ -65,15 +67,15 @@
         </div>
       </div>
     </section>
-
+  
     <section id="pinor1" class="pinorect1">
       <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
       <p class="pinofondoazulchico">Dijo el New York Times: "These two guys are really awesome. It looks like the new generation of unicorn companies is in South America."</p>
     </section>
     <section id="pinor2" class="pinorect2">
-      <div class="boxder"> <!-- ¿está media al pedo? -->
-        <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
-        <p class="pinofondoazulchicoder">Dijo el Washington Post: "This argentine company will definitely change the course of mankind history."</p>
+       <div class="boxder"> <!-- ¿está media al pedo? -->
+           <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
+           <p class="pinofondoazulchicoder">Dijo el Washington Post: "This argentine company will definitely change the course of mankind history."</p>
       </div>
     </section>
     <section id="pinor3" class="pinorect3">
@@ -81,12 +83,15 @@
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
       <p class="pinofondoazulchico">Agregó Bartolomé Mitre: "y cuando supe que estos dos viven en provincia, me quise cortar la ch#ta. Era un sueño y una pesadilla a la vez."</p>
     </section>
-    <script>
+   
+    <footer class="pinofoot">
+        <a>Todos los derechos reservados (C) Pino Software 2019</a>
+    </footer>
+
+
+     <script>
       var ancho = "Ancho: " + document.documentElement.clientWidth + "px";
       document.getElementById("ancho").innerHTML=ancho;
     </script>
   </body>
-  <footer class="pinofoot">
-      <a>Todos los derechos reservados (C) Pino Software 2019</a>
-  </footer>
 </html>
