agrego fuentes de google fonts, dos una para los titulos y otra para los textos

--- a/pino.html
+++ b/pino.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/pino.css">
     <title>Pino se planta</title>
     <link rel="stylesheet" href="css/servicios.css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Gupter|Quicksand&display=swap" rel="stylesheet">
   </head>
   <body class="pinomain">
     
