--- a/pino.html
+++ b/pino.html
@@ -38,7 +38,12 @@
         <h2 class="titulo-seccion servicios__titulo">Everything you need to take AI from research to production</h2>
         <div class="servicio__container">
           <article class="servicio__item">
-            <img class="servicio-img" src="img/pino.png" alt="">
+            <!--<img class="servicio-img" src="img/pino.png" alt="">-->
+            <div class="servicio__animacion">
+              <div class="servicio__animacion--cuadrado servicio__animacion--c1"></div>
+              <div class="servicio__animacion--cuadrado servicio__animacion--c2"></div>
+              <div class="servicio__animacion--cuadrado servicio__animacion--c3"></div>
+            </div>
             <div class="servicio__info">
               <h3 class="servicio__item-subtitulo">End-to-End</h3>
               <p class="servicio__item-texto">
@@ -47,7 +52,12 @@
             </div>
           </article>
           <article class="servicio__item">
-            <img class="servicio-img" src="img/pino.png" alt="">
+            <div class="servicio__animacion">
+              <div class="servicio__animacion--circulo servicio__animacion--ci1"></div>
+              <div class="servicio__animacion--rectangulo servicio__animacion--r1"></div>
+              <div class="servicio__animacion--rectangulo servicio__animacion--r2"></div>
+              <div class="servicio__animacion--rectangulo servicio__animacion--r3"></div>
+            </div>
             <div class="servicio__info">
               <h3 class="servicio__item-subtitulo">State of the Art</h3>
               <p class="servicio__item-texto">
@@ -56,7 +66,14 @@
             </div>
           </article>
           <article class="servicio__item">
-            <img class="servicio-img" src="img/pino.png" alt="">
+            <div class="servicio__animacion">
+              <div class="servicio__animacion--ci servicio__animacion--ci1"></div>
+              <div class="servicio__animacion--cu servicio__animacion--cu1"></div>
+              <div class="servicio__animacion--ci servicio__animacion--ci2"></div>
+              <div class="servicio__animacion--cu servicio__animacion--cu2"></div>
+              <div class="servicio__animacion--ci servicio__animacion--ci3"></div>
+              <div class="servicio__animacion--cu servicio__animacion--cu3"></div>
+            </div>
             <div class="servicio__info">
               <h3 class="servicio__item-subtitulo">Open & Compatible</h3>
               <p class="servicio__item-texto">
