--- a/pino.html
+++ b/pino.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gupter|Quicksand&display=swap" rel="stylesheet">
   </head>
   <body class="pinomain">
-    
+
     <header class="pinohead">
       <div class="container box">
         <p class="pinotitulo"><b>Pino Software </b> - Inteligencia Artificial</p>
@@ -22,25 +22,21 @@
         </div>
       </div>
     </header>
-    
-    <section class="pinotransp">
+
+    <section class="pinotransp container">
       <p class="pinofontmain">Pino Software coloca la piedra fundacional del éxito en la inteligencia artificial mediante sus investigaciones de vanguardia</p>
       <p id="ancho" class="pinofondoazulchico"></p>
       <p class="pinofondoazulchico">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
       <a class="pinotransp__button" href="#">Explore Tools &gt;</a>
     </section>
     <section id="contrapol" class="contrapoligono-pino">
-     <!--<p class="pinofondoblanco">Pino se planta.</br>Pino Software éxito mundial.</p>
-      <p class="pinofondoblancochico">Pino Software is a company that creates software solutions for different customers around the world.</br>
-      It was created by two Bill Gates fans that were Anthony "Pino Solanas" Tulic pupils.</p>--> 
     </section>
-
+  
     <section class="servicios">
       <div class="container">	
         <h2 class="titulo-seccion servicios__titulo">Everything you need to take AI from research to production</h2>
         <div class="servicio__container">
           <article class="servicio__item">
-            <!--<img class="servicio-img" src="img/pino.png" alt="">-->
             <div class="servicio__animacion">
               <div class="servicio__animacion--cuadrado servicio__animacion--c1"></div>
               <div class="servicio__animacion--cuadrado servicio__animacion--c2"></div>
@@ -86,14 +82,14 @@
         </div>
       </div>
     </section>
-  
+  <!--
     <section id="pinor1" class="pinorect1">
       <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
       <p class="pinofondoazulchico">Dijo el New York Times: "These two guys are really awesome. It looks like the new generation of unicorn companies is in South America."</p>
     </section>
     <section id="pinor2" class="pinorect2">
        <div class="boxder"> <!-- ¿está media al pedo? -->
-           <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
+         <!--  <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
            <p class="pinofondoazulchicoder">Dijo el Washington Post: "This argentine company will definitely change the course of mankind history."</p>
       </div>
     </section>
@@ -102,10 +98,10 @@
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
       <p class="pinofondoazulchico">Agregó Bartolomé Mitre: "y cuando supe que estos dos viven en provincia, me quise cortar la ch#ta. Era un sueño y una pesadilla a la vez."</p>
     </section>
-   
+
     <footer class="pinofoot">
         <a>Todos los derechos reservados (C) Pino Software 2019</a>
-    </footer>
+    </footer>-->
 
 
      <script>
