Habilito el footer

--- a/pino.html
+++ b/pino.html
@@ -97,11 +97,11 @@
       <p class="pinofondoazul">Un verdadero honor para la industria del software latinoamericana.</p>
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
       <p class="pinofondoazulchico">Agregó Bartolomé Mitre: "y cuando supe que estos dos viven en provincia, me quise cortar la ch#ta. Era un sueño y una pesadilla a la vez."</p>
-    </section>
+    </section>-->
 
     <footer class="pinofoot">
         <a>Todos los derechos reservados (C) Pino Software 2019</a>
-    </footer>-->
+    </footer
 
 
      <script>
