Se agregan dos cuadrados (o mas o menos) dentro del rectángulo, sección azul y gris

--- a/pino.html
+++ b/pino.html
@@ -25,15 +25,15 @@
 
     <section class="pinotransp container">
       <p class="pinofontmain">Pino Software coloca la piedra fundacional del éxito en la inteligencia artificial mediante sus investigaciones de vanguardia</p>
-      <p id="ancho" class="pinofondoazulchico"></p>
-      <p class="pinofondoazulchico">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
+      <p id="ancho" class="pinofondoazulmain"></p>
+      <p class="pinofondoazulmain">I'm not like them, but I can pretend. The sun is gone, but I have a light. I think I'm dumb, or maybe just happy.</p>
       <a class="pinotransp__button" href="#">Explore Tools &gt;</a>
     </section>
     <section id="contrapol" class="contrapoligono-pino">
     </section>
-  
+
     <section class="servicios">
-      <div class="container">	
+      <div class="container">
         <h2 class="titulo-seccion servicios__titulo">Everything you need to take AI from research to production</h2>
         <div class="servicio__container">
           <article class="servicio__item">
@@ -45,7 +45,7 @@
             <div class="servicio__info">
               <h3 class="servicio__item-subtitulo">End-to-End</h3>
               <p class="servicio__item-texto">
-                Accelerate development with a deep learning system that seamlessly transitions between flexibility and efficiency. 
+                Accelerate development with a deep learning system that seamlessly transitions between flexibility and efficiency.
               </p>
             </div>
           </article>
@@ -82,11 +82,19 @@
         </div>
       </div>
     </section>
-  <!--
     <section id="pinor1" class="pinorect1">
-      <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
-      <p class="pinofondoazulchico">Dijo el New York Times: "These two guys are really awesome. It looks like the new generation of unicorn companies is in South America."</p>
+      <div class="pinocuad1">
+        <p class="pinofondoazul">La mejor empresa desde Microsoft, Google y Facebook.</p>
+        <p class="pinofondoazulchico">Dijo el New York Times: These two guys are really awesome. It looks like the new generation of unicorn companies is in South America.</p>
+        <a href="#"><p class="pinofondoazulchico">Ver más &gt;</p></a>
+      </div>
+      <div class="pinocuad2">
+        <p class="pinofondoazul">Tuki tuki yuki.</p>
+        <p class="pinofondoazulchico">Hacia la gloria y la fama mundial</p>
+        <a href="#"><p class="pinofondoazulchico">Ver más &gt;</p></a>
+      </div>
     </section>
+    <!--
     <section id="pinor2" class="pinorect2">
        <div class="boxder"> <!-- ¿está media al pedo? -->
          <!--  <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
@@ -101,7 +109,7 @@
 
     <footer class="pinofoot">
         <a>Todos los derechos reservados (C) Pino Software 2019</a>
-    </footer
+    </footer>
 
 
      <script>
