Se agrega rectángulo azul abajo

--- a/pino.html
+++ b/pino.html
@@ -94,13 +94,27 @@
         <a href="#"><p class="pinofondoazulchico">Ver más &gt;</p></a>
       </div>
     </section>
-    <!--
     <section id="pinor2" class="pinorect2">
-       <div class="boxder"> <!-- ¿está media al pedo? -->
-         <!--  <p class="pinofondoazulder">Revolucionaria iniciativa que cambiará la historia</p>
-           <p class="pinofondoazulchicoder">Dijo el Washington Post: "This argentine company will definitely change the course of mankind history."</p>
+      <div class="contenedorpinocelda">
+        <div class="pinocelda">
+          <p class="pinoceldafont1">Research</p>
+          <a href="#"><p class="pinoceldafont2">Ver más &gt;</p></a>
+        </div>
+        <div class="pinocelda">
+          <p class="pinoceldafont1">Research</p>
+          <a href="#"><p class="pinoceldafont2">Ver más &gt;</p></a>
+        </div>
+        <div class="pinocelda">
+          <p class="pinoceldafont1">Research</p>
+          <a href="#"><p class="pinoceldafont2">Ver más &gt;</p></a>
+        </div>
+        <div class="pinocelda">
+          <p class="pinoceldafont1">Research</p>
+          <a href="#"><p class="pinoceldafont2">Ver más &gt;</p></a>
+        </div>
       </div>
     </section>
+    <!--
     <section id="pinor3" class="pinorect3">
       <p class="pinofondoazul">Un verdadero honor para la industria del software latinoamericana.</p>
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
