Tools, agrego los iconos de los links y arreglo detalles

--- a/pino.html
+++ b/pino.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">  
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/generales.css">
     <link rel="stylesheet" href="css/pino.css">
@@ -115,8 +116,14 @@
                         between state-of-the-art tools.
                     </p>
                     <div class="tools__links">
-                      <a class="tools__links--bodyitem" href="#">GitHub </a>
-                      <a class="tools__links--bodyitem" href="#">Overview <span class="icon"></span></a>
+                      <div class="tools__links--bodyitem">
+                        <a  class="tool__link" href="#">GitHub </a>
+                        <span class="icon-external-link"></span>
+                      </div>
+                      <div class="tools__links--bodyitem">
+                        <a class="tool__link" href="#">Overview </a>
+                        <span class="icon-angle-right"></span>
+                      </div>
                     </div>
                 </div>
               </div>
@@ -129,8 +136,14 @@
                           code from high-level mathematical operations.
                       </p>
                       <div class="tools__links">
-                        <a class="tools__links--bodyitem" href="#">GitHub </a>
-                        <a class="tools__links--bodyitem" href="#">Overview <span class="icon"></span></a>
+                        <div class="tools__links--bodyitem">
+                          <a  class="tool__link" href="#">GitHub </a>
+                          <span class="icon-external-link"></span>
+                        </div>
+                        <div class="tools__links--bodyitem">
+                          <a class="tool__link" href="#">Overview </a>
+                          <span class="icon-angle-right"></span>
+                        </div>
                       </div>
                   </div>
                 </div>
