Se comenta sección Research y se hace más responsive la sección de los rectángulos azul/gris

--- a/pino.html
+++ b/pino.html
@@ -94,7 +94,7 @@
         <a href="#"><p class="pinofondoazulchico">Ver más &gt;</p></a>
       </div>
     </section>
-    <section id="pinor2" class="pinorect2">
+    <!--<section id="pinor2" class="pinorect2">
       <div class="contenedorpinocelda">
         <div class="pinocelda">
           <p class="pinoceldafont1">Research</p>
@@ -113,7 +113,7 @@
           <a href="#"><p class="pinoceldafont2">Ver más &gt;</p></a>
         </div>
       </div>
-    </section>
+    </section>-->
     <!--
     <section id="pinor3" class="pinorect3">
       <p class="pinofondoazul">Un verdadero honor para la industria del software latinoamericana.</p>
