footer, terminada la estructura y estilos

--- a/pino.html
+++ b/pino.html
@@ -9,6 +9,7 @@
     <title>Pino se planta</title>
     <link rel="stylesheet" href="css/servicios.css">
     <link rel="stylesheet" href="css/tools.css">
+    <link rel="stylesheet" href="css/pie.css">
     <!--<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Gupter|Quicksand&display=swap" rel="stylesheet">
   </head>
@@ -186,7 +187,7 @@
         </div>
       </div>
     </section>
-    <!--
+    
     <section id="pinor3" class="pinorect3">
       <p class="pinofondoazul">Un verdadero honor para la industria del software latinoamericana.</p>
       <p class="pinofondoazulchico">Dijo La Nación: "Una iniciativa de tal magnitud solo podría haber sido hecha en una República hecha y derecha. Sorprende que sean argentinos.""</p>
@@ -194,7 +195,17 @@
     </section>-->
 
     <footer class="pinofoot">
-        <a>Todos los derechos reservados (C) Pino Software 2019</a>
+      <div class="container pinofoot__container">
+        <ul class="pinofoot__privacidad"> 
+          <li class="pinofoot__privacidad-item"><a href="#">Privacy Policy</a></li>
+          <li class="pinofoot__privacidad-item"><a href="#">Terms</a></li>
+          <li class="pinofoot__privacidad-item"><a href="#">Cookies</a></li>
+          <li class="pinofoot__privacidad-item"><a href="#">Create Ad</a></li>
+        </ul>
+        <div class="pinofoot__firma">
+          <p>Pino SoftWare &copy; 2019</p>
+        </div>
+      </div>  
     </footer>
 
 
