Sección antes de footer con lugar para íconos

--- a/pino.html
+++ b/pino.html
@@ -188,7 +188,8 @@
       </div>
       <div class="contenedorpinoceldader">
         <div class="pinoceldader">
-          <p class="pinoceldafont1">C</p>
+          <!--<p class="pinoceldafont1">C</p>-->
+          <div class="servicio__animacion--cuadrado servicio__animacion--c1"></div>
         </div>
         <div class="pinoceldader">
           <p class="pinoceldafont1">L</p>
