Sección antes de footer letra en lugar de ícono

--- a/pino.html
+++ b/pino.html
@@ -192,6 +192,9 @@
           <div class="servicio__animacion--cuadrado servicio__animacion--c1"></div>
         </div>
         <div class="pinoceldader">
+          <p class="pinoceldafont1">C</p>
+        </div>
+        <div class="pinoceldader">
           <p class="pinoceldafont1">L</p>
         </div>
       </div>
