Se cambian letras por íconos de Google en sección anterior a footer

--- a/pino.html
+++ b/pino.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/pie.css">
     <!--<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Gupter|Quicksand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"><!-- Google Icons -->
   </head>
   <body class="pinomain">
 
@@ -188,10 +189,12 @@
       </div>
       <div class="contenedorpinoceldader">
         <div class="pinoceldader">
-          <p class="pinoceldafont1">C</p>
+          <!--<p class="pinoceldafont1">C</p>-->
+          <i class="material-icons">cloud</i>
         </div>
         <div class="pinoceldader">
-          <p class="pinoceldafont1">L</p>
+          <!--<p class="pinoceldafont1">L</p>-->
+          <i class="material-icons">favorite</i>
         </div>
       </div>
     </section>
